--- a/BeamformingBasics.ipynb
+++ b/BeamformingBasics.ipynb
@@ -2,8 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c4d20b0f",
+   "execution_count": 3,
+   "id": "85806502",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fatal: destination path 'BeamformingBasics' already exists and is not an empty directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git clone https://github.com/fchirono/BeamformingBasics.git\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0,'/content/BeamformingBasics')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7209c3e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e545bd2a",
+   "id": "4120fefc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f1621db",
+   "id": "077325da",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8537a990",
+   "id": "3bb696bb",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "767ae746",
+   "id": "6c801583",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9972f2fa",
+   "id": "f6274760",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae854df6",
+   "id": "eb4a93c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6174eaa",
+   "id": "179601c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,8 +244,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Spyder)",
-   "language": "python3",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
