Adds more explanatory text to ipynb

--- a/BeamformingBasics.ipynb
+++ b/BeamformingBasics.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "https://github.com/fchirono/BeamformingBasics\n",
     "\n",
-    "This Python package provides some basic functions for creating Uniform Linear Arrays (ULAs) and delay-and-sum beamforming using these arrays. The implementations provided herein are **not** optimized in any form, and instead are meant to be simple to follow.\n",
+    "This Python package provides some basic functions for creating Uniform Linear Arrays (ULAs) and delay-and-sum beamforming using these arrays. The implementations provided herein are **not** optimized in any form, and instead are meant to illustrate some basic principles.\n",
     "\n",
     "### Author:\n",
     "Fabio Casagrande Hirono - fchirono [at] gmail.com\n",
@@ -25,7 +25,11 @@
    "source": [
     "# Beamforming Tutorial\n",
     "\n",
-    "Let us use the `BeamformingBasics` package to create a Uniform Linear Array, synthesize some acoustic signals, and apply delay-and-sum beamforming to filter these signals. We begin by cloning the GitHub repo to Google Colab's virtual machine using the commands below:"
+    "Let us use the `BeamformingBasics` package to create a Uniform Linear Array, synthesize some acoustic signals, and apply delay-and-sum beamforming to these signals. We encourage you to play around with this code and change some variables; the ones we recommend you to try and change are positioned within blocks of comments that look like `*-*-*-*-`, but feel free to play around with any other part of the code.\n",
+    "\n",
+    "To run this iPython Notebook, click on a block of code and press `CTRL+Enter` to run the block. Alternatively, hover the mouse cursor near the two square brackets to the left of the block (`[ ]`) until they transform into a \"play\" button, and click on the button. The code will run, and any output will be displayed immediately below it.\n",
+    "\n",
+    "We begin by cloning the Python package from its GitHub repo to Google Colab's virtual machine using the commands below. If you would like to try it on your own machine, it's probably easier to just download the package directly from GitHub."
    ]
   },
   {
@@ -45,7 +49,7 @@
    "id": "f9c25148",
    "metadata": {},
    "source": [
-    "Let us now import the usual Python packages for scientific programming: `numpy` for numerical computing, `matplotlib` for plotting, and our own `BeamformingBasics` (imported as `bf`):"
+    "Let us now import the usual Python packages for scientific programming: `numpy` for numerical computing, `matplotlib` for plotting, and our own `BeamformingBasics` (imported as `bf`), and define our constant `c0` for the speed of sound:"
    ]
   },
   {
@@ -64,10 +68,6 @@
     "# package for beamforming basics\n",
     "import BeamformingBasics as bf\n",
     "\n",
-    "\n",
-    "plt.close('all')\n",
-    "\n",
-    "save_fig = False\n",
     "\n",
     "# speed of sound\n",
     "c0 = 1500."
@@ -104,7 +104,7 @@
    "id": "301ee499",
    "metadata": {},
    "source": [
-    "To our ULA: the `BeamformingBasics` package allows us to create a ULA by calling the function `bf.SensorArray(L, M)`, where `L` is the array length in meters and `M` is the number of sensors (here we assume `M` is always odd for simplicity). Note that, upon successful creation of our ULA, the function will automatically print the inter-sensor spacing for this array:"
+    "Onwards to our Uniform Linear Array: the `BeamformingBasics` package allows us to create a ULA by calling the function `bf.SensorArray(L, M)`, where `L` is the array length in meters and `M` is the number of sensors (here we assume `M` is always odd for simplicity). Note that, upon successful creation of our ULA, the function will automatically print the inter-sensor spacing for this array:"
    ]
   },
   {
@@ -116,9 +116,15 @@
    "source": [
     "# create uniform linear array - try to change these values and see what happens!\n",
     "\n",
-    "L = 1.4     # [m]\n",
-    "M = 15      \n",
+    "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
+    "# Array length [m]\n",
     "\n",
+    "L = 1.4     \n",
+    "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
+    "# Number of sensors in array (must be odd!)\n",
+    "\n",
+    "M = 15      \n",
+    "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "MyULA = bf.SensorArray(L, M)"
    ]
   },
@@ -127,7 +133,7 @@
    "id": "492e6e59",
    "metadata": {},
    "source": [
-    "Our array definition is stored in the object `MyULA`, and its properties can be explored as shown here:"
+    "Our array definition is stored in the object `MyULA`, and its properties can be explored by accessing its attributes (i.e. \"data\") as shown here:"
    ]
   },
   {
@@ -149,7 +155,7 @@
    "id": "71d601a9",
    "metadata": {},
    "source": [
-    "We will now create the source signal. We will use the function `bf.create_narrowband_pulse` to create a signal with center frequency `f0`, amplitude `a0` and duration `T_pulse`. Let us also check whether our ULA might be subject to spatial aliasing at this specific frequency!"
+    "We will now create the source signal. We will use the function `bf.create_narrowband_pulse` to create a signal with center frequency `f0`, amplitude `a0` and duration `T_pulse`. Let us also check whether our ULA might be subject to spatial aliasing at this frequency!"
    ]
   },
   {
@@ -166,6 +172,7 @@
     "\n",
     "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "# narrowband pulse center frequency - try other values!\n",
+    "\n",
     "f0 = 5000            # [Hz]\n",
     "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "\n",
@@ -186,7 +193,7 @@
    "id": "9efbea34",
    "metadata": {},
    "source": [
-    "Now, we need to choose one direction of arrival `theta0_deg` for our incoming plane wave containing the narrowband pulse, the onset time for the pulse, and a signal-to-noise ratio (SNR) for the array signals. In order to inspect the resulting data, let us plot the signals for the first, the middle and the last sensors in our array:"
+    "Now, we need to choose one direction of arrival `theta0_deg` for our incoming plane wave containing the narrowband pulse, the onset time `t_initial` for the pulse, and a signal-to-noise ratio (SNR) in decibels for the array signals. In order to inspect the resulting data, let us plot the signals for the first, the middle and the last sensors in our array:"
    ]
   },
   {
@@ -199,13 +206,16 @@
     "# create array of sensor signals from a given direction of arrival\n",
     "\n",
     "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
-    "# direction of arrival of narrowband pulse\n",
+    "# direction of arrival of narrowband pulse, in degrees\n",
     "# --> try any value between 0 and 180\n",
-    "theta0_deg = 45.\n",
     "\n",
+    "theta0_deg = 45.\n",
+    "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "# signal-to-noise ratio at array signal\n",
-    "# --> 60 dB means almost no noise is present;\n",
+    "# --> 'None' means no noise is present\n",
+    "# --> 60 dB means very little noise is present\n",
     "# -->  0 dB means signal and noise have the same power - will the beamformer even work?\n",
+    "\n",
     "SNR_dB = 60\n",
     "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "\n",
@@ -215,9 +225,8 @@
     "p_array = bf.create_array_signals(MyULA, x_pulse, t_initial, T, theta0_deg, fs,\n",
     "                                  c0, SNR_dB)\n",
     "\n",
-    "# plot some array signals\n",
+    "# plot first, middle and last array signals\n",
     "plt.figure()\n",
-    "\n",
     "m_index = [0, int((M-1)/2), M-1]\n",
     "for m in range(3):\n",
     "    plt.subplot(3, 1, m+1)\n",
@@ -231,12 +240,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95de5f67",
+   "metadata": {},
+   "source": [
+    "For a visual reference, let us plot a plane wave acoustic field at the same frequency and direction of arrival as the narrowband pulse created above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fbcf44a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create 2D mesh of (x, y) points\n",
+    "mesh_side1 = np.linspace(-0.7*L, 0.7*L, 1400)\n",
+    "mesh_side2 = np.linspace(-0.475*L, 0.475*L, 950)\n",
+    "XY_mesh = np.array(np.meshgrid(mesh_side1, mesh_side2))\n",
+    "\n",
+    "XY_mesh[1] += 0.4*L\n",
+    "\n",
+    "# create acoustic wavenumber vector, pointint at the DIRECTION OF PROPAGATION\n",
+    "# of the plane wave (opposite to the DIRECTION OF ARRIVAL!)\n",
+    "k0 = 2*np.pi/ac_wavelength\n",
+    "theta0 = theta0_deg*np.pi/180.\n",
+    "k_vec = k0*np.array([-np.cos(theta0), -np.sin(theta0)])\n",
+    "\n",
+    "# create plane wave acoustic field\n",
+    "p_planewave = np.exp(-1j*np.tensordot(k_vec, XY_mesh, axes=(0,0)))\n",
+    "\n",
+    "# plot acoustic field and array positions\n",
+    "fig = plt.figure(figsize=(7, 5))\n",
+    "ax = fig.add_subplot(111)\n",
+    "ax.pcolormesh(XY_mesh[0], XY_mesh[1], p_planewave.real, cmap='seismic',\n",
+    "              shading='nearest', vmin=-5, vmax=+5)\n",
+    "ax.plot(MyULA.XY[0], MyULA.XY[1], 'ko')\n",
+    "ax.set_xlabel(r'$x$', fontsize=15)\n",
+    "ax.set_xticks(ticks=np.array([-0.5, 0., 0.5])*L)\n",
+    "ax.set_xticklabels([r'$-\\frac{L}{2}$', r'$0$', r'$+\\frac{L}{2}$'],\n",
+    "                   fontsize=12)\n",
+    "ax.set_ylabel(r'$y$', fontsize=15)\n",
+    "ax.set_yticks(ticks=np.array([0., 0.5])*L)\n",
+    "ax.set_yticklabels([r'$0$', r'$+\\frac{L}{2}$'], fontsize=12)\n",
+    "ax.axis('equal')\n",
+    "\n",
+    "# indicate direction of propagation of plane wave with a red arrow\n",
+    "ax.arrow(0.65*L*np.cos(theta0), 0.65*L*np.sin(theta0),\n",
+    "         -0.1*L*np.cos(theta0), -0.1*L*np.sin(theta0),\n",
+    "         width=0.01*L, head_width=0.05*L, head_length=0.04*L,\n",
+    "         length_includes_head=True, edgecolor = 'k', facecolor = 'r')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "775ed870",
    "metadata": {},
    "source": [
-    "In order to calculate the delay-and-sum beamformer, we need a vector of steering angles `theta` (i.e. \"look directions\") to steer our array towards. Let's define a range of `N_theta` points over the entire [0, 180deg] range. Let us also define our vector of amplitude shading `weights` - just uncomment the one you choose and comment out the others. \n",
+    "In order to calculate the delay-and-sum beamformer, we need a vector of steering angles `theta` (i.e. \"look directions\") to steer our array towards. Let's define a range of `N_theta` points covering the entire [0, 180] degrees range. Let us also define our vector of amplitude shading `weights` - just uncomment the one you choose and comment out the others using a hash `#`. \n",
     "\n",
-    "The actual beamforming calculation is performed via the function `bf.delayandsum_beamformer`, which takes as arguments the object containing the array geometry, the array of sensor signals, the vector of look directions, and the sampling frequency. This function might take a few seconds to run (remember, the code is **not** optimized!). The beamformer function returns a (`N_theta`, `N_time`)-shaped array containing the beamformer output signal y(t) for each look direction theta."
+    "The actual beamforming calculation is performed via the function `bf.delayandsum_beamformer`, which takes as arguments the object containing the ULA geometry, the sensor signals, the vector of look directions, and the sampling frequency. This function might take a few seconds to run (remember, the code is **not** optimized!). The beamformer function returns a (`N_theta`, `N_time`)-shaped array containing the beamformer output signal y(t) for each look direction theta."
    ]
   },
   {
@@ -255,6 +317,7 @@
     "\n",
     "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "## array shading schemes - uncomment one\n",
+    "\n",
     "weights = np.ones(M)\n",
     "# weights = ss.windows.hann(M)\n",
     "# weights = ss.windows.chebwin(M, 40)\n",
@@ -268,9 +331,9 @@
    "id": "34283382",
    "metadata": {},
    "source": [
-    "We now plot the beamformer output y(theta, t) for a few candidate steering directions. If the steering direction matches the direction of arrival `theta0` of the plane wave, you should see a large amplitude narrowband pulse; otherwise, expect to see small amplitudes - or even zero.\n",
+    "We now plot the beamformer output y(theta, t) for a few candidate steering directions - say, 0 deg, 45 deg and 90 deg. If the steering direction matches the direction of arrival `theta0` of the plane wave, you should see a large amplitude pulse; otherwise, destructive interference between the misaligned sensor signals will yield a low amplitude result - or perhaps even zero!\n",
     "\n",
-    "It is very interesting to compare the beamformer output y(t) to the signal captured by the center sensor p0(t). The second figure was created so that it superimposes the center sensor signal to the beamformer output when the steering direction matches the plane wave DoA; note how the beamformer output has significantly less noise than the single sensor!"
+    "It is very interesting to compare the beamformer output y(t) to the signal captured by the center sensor p0(t). The second figure was created so that it superimposes the center sensor signal to the beamformer output when the steering direction matches the plane wave DoA. Note how the beamformer output has significantly less noise than the single sensor."
    ]
   },
   {
@@ -316,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# beamformer polar plot\n",
+    "# Create beamformer polar plot\n",
     "\n",
     "y_beamf_polar = np.sum(y_beamformer**2, axis=1)\n",
     "\n",
@@ -325,6 +388,7 @@
     "\n",
     "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "# Polar plot dynamic range\n",
+    "\n",
     "dyn_range = 25      # dB\n",
     "# *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
     "\n",
@@ -346,12 +410,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9df39011",
+   "cell_type": "markdown",
+   "id": "83feec04",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "And that's it for today! I hope you had fun and learned something :)\n",
+    "\n",
+    "All the best,\n",
+    "\n",
+    "Fabio\n"
+   ]
   }
  ],
  "metadata": {
