Fixes a newline on ipynb

--- a/BeamformingBasics.ipynb
+++ b/BeamformingBasics.ipynb
@@ -41,7 +41,8 @@
    "source": [
     "!git clone https://github.com/fchirono/BeamformingBasics.git\n",
     "\n",
-    "import sys sys.path.insert(0,'/content/BeamformingBasics')\n"
+    "import sys\n",
+    "sys.path.insert(0,'/content/BeamformingBasics')\n"
    ]
   },
   {
